--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = ">=3.10,<4.0"
 restack-ai = "0.0.47"
 openai = "^1.57.1"
 pydantic = "^2.10.3"
-e2b-code-interpreter = "1.0.3"
+#e2b-code-interpreter = "1.0.3" not needed, runs locally
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2"  # Optional: Add if you want to include tests in your example
